# iptv

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  config.example.toml  iptv-favourites.desktop
src/: cache.rs  config.rs  favourites.rs  ignore.rs  lib.rs  main.rs  menu.rs  mpv_player.rs  player.rs  setup.rs  vlc_player.rs  xtream.rs  xtream_api.rs
src/cli/: cache.rs  favorites.rs  menu.rs  mod.rs  play.rs  providers.rs
src/commands/: cache.rs  info.rs  list.rs  search.rs
src/player/: ffplay.rs  mod.rs  mpv.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs  widgets.rs
