# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: (C) 2025 Cranky Kernel <crankykernel@proton.me>

[package]
name = "iptv"
version = "0.1.0"
license = "MIT"
edition = "2024"

[[bin]]
name = "iptv"
path = "src/main.rs"

[dependencies]
inquire = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full", "fs"] }
tokio-stream = "0.1"
futures-util = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
url = "2.4"
sha2 = "0.10"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
