# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: (C) 2025 Cranky Kernel <crankykernel@proton.me>

[package]
name = "iptv"
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.88.0"

[[bin]]
name = "iptv"
path = "src/main.rs"

[dependencies]
inquire = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tokio = { version = "1.47", features = ["full", "fs"] }
tokio-stream = "0.1"
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.18"
url = "2.5"
sha2 = "0.10"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
terminal_size = "0.4"
ratatui = "0.29"
crossterm = "0.29"
rand = "0.9"
fuzzy-matcher = "0.3"
urlencoding = "2.1.3"
libc = "0.2.175"
